tests/types/errors/unknown_type_name.mochi
// MEP-4 P8: a typo in a type position should not silently widen to `any`.
let count: Int = 0
